@@ -15,11 +15,17 @@
 \newcommand{\Cp}{\ifelse{latex}{\eqn{C_P}}{\ifelse{html}{\out{<I>C<sub>P</sub></I>}}{Cp}}}
 \newcommand{\DG0}{\ifelse{latex}{\eqn{{\Delta}G^{\circ}}}{\ifelse{html}{\out{&Delta;<I>G</I>&deg;}}{ΔG°}}}
 
-\section{Changes in CHNOSZ version 2.1.0-2 (2024-02-28)}{
+\section{Changes in CHNOSZ version 2.1.0-3 (2024-03-02)}{
 
     \itemize{
+
       \item Move \code{read.fasta()}, \code{count.aa()}, and \code{aasum()} to canprot package.
+
       \item Remove \code{seq2aa()}.
+
+      \item Remove \code{add.alpha()}. Now \code{grDevices::adjustcolor()} is
+      used in \code{stack_mosaic()} to add transparency.
+
     }
 
 }
